--- a/.env
+++ b/.env
@@ -35,7 +35,8 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&ch
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
-
+IMAGE_UPLOAD_DIR='/images/uploads'
+KERNEL_CLASS='Core\Infrastructure\Kernel'
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
